	* Création de l'ajout d'une liaison d'un produit
		=> Affiche la liste des liaisons dans l'édition du produit
		=> Ajoute une liaison de produits
		=> Suppression de la liaison de produits
	* Ajout de la réécriture d'url des produits dans la classe rewrite (méthode filter_catalog_product_url)
	* Modification des urls CMS + produits catalogue dans le système de sitemap xml
	
Stable 2.3.38
	* Ajout de la soumission ajax avec notification
		=> Ajouter une page CMS
		=> Edition d'une page CMS
		=> Ajout d'un produit dans le catalogue
		=> Edition d'un produit dans le catalogue
		=> Ajouter une réécriture des métas
		=> Edition d'une reecriture des métas
		=> Changement de template
		=> Ajout d'une page d'accueil
		=> Edition d'une page d'accueil
		=> Ajout d'une news
		=> Editer une news
	* Création de fichiers d'exécution pour chaque module indépendant (dossier admin)
		=> catalog.php
		=> cms.php
		=> config.php
		=> dashboard.php
		=> googletools.php
		=> home.php
		=> lang.php
		=> news.php
		=> plugins.php
		=> sitemap.php
		=> templates.php
		=> users.php
	* Multiplication de la vitesse par 5 pour l'upload des images catalogue, images micro galerie (Ecriture plus rapide)
	
Stable 2.3.37
	* Initialisation de magixglobal sur l'ensemble du logiciel
	* Suppression des variables globales $_SERVER['DOCUMENT_ROOT'] sur l'ensemble de l'installation pour permettre l'utilisation de localhost
		=> Reecriture des chemins
	* Ajout des licences open source dans deux fichiers ainsi qu'une entête dans chaque fichiers
	* Création de la fonction base_path() dans la classe magixglobal_model_system pour la racine de l'installation
	* Ajout de ajax notification pour le remplacement des messages de retour classique
	
Stable 2.3.36
	* Suppression du plugin smarty notify_header
	* Ajout de la fonction smarty notify_dir_header en remplacement de notify_header
	* Ajout de la fonction smarty header_notify pour les notifications utilisateurs (en cours de développement)
	
Stable 2.3.35