@@ -17,7 +17,7 @@
 					<div class="dashboard-header ui-widget-header ui-corner-all"><span style="float:left;" class="ui-icon ui-icon-document"></span>Les news</div>
 					<div class="dashboard-content">
 					{if $confignews eq 1}
-						{widget_news limit="true" max=4 getpage=true}
+						{widget_news limit="true" max=20 getpage=true}
 					{else}
 					<div style="margin:5px;padding:5px;" class="ui-state-error ui-corner-all">
 					<span style="float:left;" class="ui-icon ui-icon-alert"></span>
